# colorgroup

./: README
colorgroup/: Makefile  back.c  colorgroup  colorgroup.c
colorgroup2/: CMakeLists.txt  Makefile  colorgroup  colorgroup.c
colorgroup3/: CMakeLists.txt  README  colorgroup.c  mtwist.c
ito_anneal/: main.c
jap_anneal/: .main.c.swp  1  anneal  main.c~
jap_anneal/ppm/: 0000.ppm  0002.ppm  0003.ppm  0004.ppm  0005.ppm  0006.ppm
